Feature : "퀘스트 구성 완료, 퀘스트 대사는 짜야함. UI 연동 남음."

--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -351,6 +351,17 @@
     <ClInclude Include="..\Header\PushStone.h" />
     <ClInclude Include="..\Header\Quest.h" />
     <ClInclude Include="..\Header\QuestMgr.h" />
+    <ClInclude Include="..\Header\Quest_Artist1.h" />
+    <ClInclude Include="..\Header\Quest_Conversation.h" />
+    <ClInclude Include="..\Header\Quest_Cow1.h" />
+    <ClInclude Include="..\Header\Quest_Cow2.h" />
+    <ClInclude Include="..\Header\Quest_Hunting.h" />
+    <ClInclude Include="..\Header\Quest_MonkeyCheif1.h" />
+    <ClInclude Include="..\Header\Quest_MonkeyCheif3.h" />
+    <ClInclude Include="..\Header\Quest_MonkeyCheif2.h" />
+    <ClInclude Include="..\Header\Quest_NueHero1.h" />
+    <ClInclude Include="..\Header\Quest_NueHero2.h" />
+    <ClInclude Include="..\Header\Quest_Sheep.h" />
     <ClInclude Include="..\Header\QuickSlot.h" />
     <ClInclude Include="..\Header\QuizStatue.h" />
     <ClInclude Include="..\Header\RabbitMgr.h" />
@@ -584,6 +595,17 @@
     <ClCompile Include="..\Code\PushStone.cpp" />
     <ClCompile Include="..\Code\Quest.cpp" />
     <ClCompile Include="..\Code\QuestMgr.cpp" />
+    <ClCompile Include="..\Code\Quest_Artist1.cpp" />
+    <ClCompile Include="..\Code\Quest_Conversation.cpp" />
+    <ClCompile Include="..\Code\Quest_Cow1.cpp" />
+    <ClCompile Include="..\Code\Quest_Cow2.cpp" />
+    <ClCompile Include="..\Code\Quest_Hunting.cpp" />
+    <ClCompile Include="..\Code\Quest_MonkeyCheif1.cpp" />
+    <ClCompile Include="..\Code\Quest_MonkeyCheif2.cpp" />
+    <ClCompile Include="..\Code\Quest_MonkeyChief3.cpp" />
+    <ClCompile Include="..\Code\Quest_NueHero1.cpp" />
+    <ClCompile Include="..\Code\Quest_NueHero2.cpp" />
+    <ClCompile Include="..\Code\Quest_Sheep.cpp" />
     <ClCompile Include="..\Code\QuickSlot.cpp" />
     <ClCompile Include="..\Code\QuizStatue.cpp" />
     <ClCompile Include="..\Code\RabitObj.cpp" />
