터렛게이지, 풀 아이템 드롭

--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -425,6 +425,7 @@
     <ClInclude Include="..\Header\UI_SlotOne.h" />
     <ClInclude Include="..\Header\UI_SlotThree.h" />
     <ClInclude Include="..\Header\UI_SlotTwo.h" />
+    <ClInclude Include="..\Header\UI_TurretGauge.h" />
     <ClInclude Include="..\Header\UI_Veil.h" />
     <ClInclude Include="..\Header\UseItem.h" />
     <ClInclude Include="Client.h" />
@@ -671,6 +672,7 @@
     <ClCompile Include="..\Code\UI_SlotThree.cpp" />
     <ClCompile Include="..\Code\UI_SlotTwo.cpp" />
     <ClCompile Include="..\Code\UI_ShortCutKey.cpp" />
+    <ClCompile Include="..\Code\UI_TurretGauge.cpp" />
     <ClCompile Include="..\Code\UI_Veil.cpp" />
     <ClCompile Include="..\Code\UseItem.cpp" />
     <ClCompile Include="Client.cpp" />
