--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -670,6 +670,9 @@
     <Filter Include="98. Manager\04. Quest\Quest\Quests\07">
       <UniqueIdentifier>{05ce5a9f-7430-43e6-9479-77baf516a52a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\04. UI\05. Monster HPBar\02. Turret_Gauge">
+      <UniqueIdentifier>{8edbb48f-cdc9-4938-bbd3-a122c2a56a62}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -1370,6 +1373,9 @@
     <ClInclude Include="..\Header\Quest_NueHero2.h">
       <Filter>98. Manager\04. Quest\Quest\Quests\07</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\UI_TurretGauge.h">
+      <Filter>02. GameObject\04. UI\05. Monster HPBar\02. Turret_Gauge</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -1974,9 +1980,6 @@
     <ClCompile Include="..\Code\FloorDoor.cpp" />
     <ClCompile Include="..\Code\Scene_MonkeyForest3.cpp" />
     <ClCompile Include="..\Code\TrashPrist.cpp" />
-    <ClCompile Include="RabbitMgr.cpp">
-      <Filter>02. GameObject\06. FieldObj\05. HitObj\03. RabitObj</Filter>
-    </ClCompile>
     <ClCompile Include="..\Code\TurretBullet.cpp">
       <Filter>02. GameObject\16. Bullet\03. Turret_Bullet</Filter>
     </ClCompile>
@@ -2031,6 +2034,10 @@
     </ClCompile>
     <ClCompile Include="..\Code\Quest_NueHero2.cpp">
       <Filter>98. Manager\04. Quest\Quest\Quests\07</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\RabbitMgr.cpp" />
+    <ClCompile Include="..\Code\UI_TurretGauge.cpp">
+      <Filter>02. GameObject\04. UI\05. Monster HPBar\02. Turret_Gauge</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
