--- a/Framework/Engine/Utility/Include/Utility.vcxproj
+++ b/Framework/Engine/Utility/Include/Utility.vcxproj
@@ -210,6 +210,7 @@ call CopyUtility.bat</Command>
     <ClInclude Include="..\..\Header\RcCubeCol.h" />
     <ClInclude Include="..\..\Header\RcPuzzleBuff.h" />
     <ClInclude Include="..\..\Header\RigidBody.h" />
+    <ClInclude Include="..\..\Header\Shader.h" />
     <ClInclude Include="..\..\Header\SoundMgr.h" />
     <ClInclude Include="..\..\Header\TerrainTex.h" />
     <ClInclude Include="..\..\Header\RcTex.h" />
@@ -243,6 +244,7 @@ call CopyUtility.bat</Command>
     <ClCompile Include="..\Code\RcCubeCol.cpp" />
     <ClCompile Include="..\Code\RcPuzzleBuff.cpp" />
     <ClCompile Include="..\Code\RigidBody.cpp" />
+    <ClCompile Include="..\Code\Shader.cpp" />
     <ClCompile Include="..\Code\SoundMgr.cpp" />
     <ClCompile Include="..\Code\TerrainTex.cpp" />
     <ClCompile Include="..\Code\RcTex.cpp" />
