--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -442,6 +442,7 @@
     <ClInclude Include="..\Header\UI_SlotTwo.h" />
     <ClInclude Include="..\Header\UI_TurretGauge.h" />
     <ClInclude Include="..\Header\UI_Veil.h" />
+    <ClInclude Include="..\Header\UI_Wallet.h" />
     <ClInclude Include="..\Header\UseItem.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="Resource.h" />
@@ -697,6 +698,7 @@
     <ClCompile Include="..\Code\UI_ShortCutKey.cpp" />
     <ClCompile Include="..\Code\UI_TurretGauge.cpp" />
     <ClCompile Include="..\Code\UI_Veil.cpp" />
+    <ClCompile Include="..\Code\UI_Wallet.cpp" />
     <ClCompile Include="..\Code\UseItem.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="stdafx.cpp">
