--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -676,6 +676,9 @@
     <Filter Include="02. GameObject\04. UI\12. MapName">
       <UniqueIdentifier>{5bd20c93-82f0-4537-b565-fbcf0701ca89}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\04. UI\00. PlayerInfo\03. Wallet">
+      <UniqueIdentifier>{4713fa52-3344-4120-bd9b-a3dffed69fd7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -1391,6 +1394,9 @@
     <ClInclude Include="..\Header\UI_MapName.h">
       <Filter>02. GameObject\04. UI\12. MapName</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\UI_Wallet.h">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\03. Wallet</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -2066,6 +2072,9 @@
     <ClCompile Include="..\Code\UI_MapName.cpp">
       <Filter>02. GameObject\04. UI\12. MapName</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\UI_Wallet.cpp">
+      <Filter>02. GameObject\04. UI\00. PlayerInfo\03. Wallet</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
@@ -2084,5 +2093,8 @@
     <Text Include="ReadMe.txt">
       <Filter>99. Etc</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\Bin\ShaderFiles\LightShader.hlsl" />
   </ItemGroup>
 </Project>
