달숲 기믹, 컷신 완성

--- a/Framework/Client/Include/imgui.ini
+++ b/Framework/Client/Include/imgui.ini
@@ -19,8 +19,8 @@ Size=211,422
 Collapsed=0
 
 [Window][Inspector]
-Pos=799,21
-Size=208,448
+Pos=984,-5
+Size=208,395
 Collapsed=0
 
 [Window][Hierachy]
