--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -1400,6 +1400,7 @@
     <ClInclude Include="..\Header\SilkWorm.h">
       <Filter>02. GameObject\08. Boss\01. SilkWorm</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\Effect_CircleBlur.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -2080,6 +2081,7 @@
     <ClCompile Include="..\Code\RabbitMgr.cpp">
       <Filter>02. GameObject\06. FieldObj\05. HitObj\03. RabitObj</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\Effect_CircleBlur.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
